<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECEFF1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroudColor"
        android:paddingLeft="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_quiz"
            android:textSize="@dimen/MediumText"
            android:textColor="@color/textColor"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/gk_quiz_Bt"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/MediumText"
            android:text="@string/gk_quiz"
            android:textColor="@color/backgroudColor"
            android:background="@color/textColor"/>


        <Button
            android:id="@+id/others_quiz_Bt"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_quiz"
            android:textSize="@dimen/MediumText"
            android:textColor="@color/backgroudColor"
            android:background="@color/textColor"/>

        </LinearLayout>
</LinearLayout>